Links list +  login + logout

--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -1,1 +1,3 @@
-<p>This is the links/list view.</p>
+<!-- <div ng-show="showLoading">Chargement en cours...</div> -->
+
+<div ng-include="'views/links/show_link.html'" ng-init="tree"></div>
