--- a/app/views/users/login.html
+++ b/app/views/users/login.html
@@ -1,9 +1,11 @@
+<div class="alert alert-danger" ng-show="showError">Incorrect username and/or password.</div>
+
 <form role="form" ng-submit="login()">
 	<div class="form-group">
-		<input type="email" class="form-control" placeholder="Login">
+		<input type="text" class="form-control" id="username" ng-model="username" placeholder="Login">
 	</div>
 	<div class="form-group">
-		<input type="password" class="form-control" placeholder="Password">
+		<input type="password" class="form-control" ng-model="password" placeholder="Password">
 	</div>
 	<button type="submit" class="btn btn-default">Sign In</button>
 </form>
