--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,79 +1,147 @@
-/* Space out content a bit */
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,100,700,900,500);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+
+html {
+	position: relative;
+	min-height: 100%;
+}
+
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+	padding-top: 80px;
+	margin-bottom: 190px;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+h1 {
+	font-size: 34px;
+	color: #ff551a;
+	margin-top: 40px;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+/* Global styles */
+.clear {
+	clear: both;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+/* Form */
+.submit {
+	background-color: #ff551a;
+    color: #fff;
+    border: none;
+    padding: 8px 18px;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
+.submit:hover {
+    background-color: #444;
+    color: #fff;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+/* Navigation */
+.navbar {
+	height: 80px;
+	background-color: #f5f5f5;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.navbar .container {
+	height: 100%;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.navbar a, .navbar .navbar-nav > li > a {
+	font-family: 'Roboto';
+	font-size: 12px;
+	font-weight: bold;
+	display: block;
+	height: 100%;
+	color: #888;
+	text-transform: uppercase;
+	line-height: 80px;
+	padding: 0 30px;
+}
+
+.navbar .navbar-nav > li > a:hover {
+	background-color: #ff551a;
+	color: #fff;
+}
+
+.navbar-toggle {
+	border-color: #444;
+	margin: 20px 20px 0 0;
+}
+
+.navbar-toggle .icon-bar {
+	background-color: #444;
+}
+
+.navbar-collapse .navbar-nav {
+	margin: 0 -15px;
+}
+.navbar-collapse .navbar-nav li {
+	background-color: #f5f5f5;
+	border-top: 1px solid #eee;
+}
+
+/* Footer */
+#footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 190px;
+	background-color: #444;
+	color: #fff;
+	font-family: 'Open Sans';
+}
+
+#social {
+	float: right;
+	margin-top: 40px;
+}
+
+#copyright {
+	font-size: 13px;
+	text-align: center;
+	margin-top: 40px;
+}
+
+#copyright a {
+	color: #ff551a;
+}
+
+.fa {
+	font-size: 3.2em;
+	color: #fff;
+}
+
+.fa:hover {
+	color: #ff551a;
+}
+
+/* Login */
+#login {
+	width: 40%;
+	margin: auto;
+}
+
+#login .input-group {
+	margin: 25px 0;
+	width: 100%;
+}
+
+.forgotten_password {
+	color: #888;
+	font-style: italic;
+	line-height: 35px;
+}
+
+.forgotten_password:hover {
+	color: #ff551a;
+	text-decoration: none;
+}
+
+#login .submit {
+	float: right;
+}
+
+/* Search */
+#search {
+	width: 40%;
+	margin: auto;
 }
