--- a/app/views/links/search.html
+++ b/app/views/links/search.html
@@ -1,4 +1,6 @@
-<form role="form" ng-submit="search()">
+<h1>Search</h1>
+
+<form role="form" ng-submit="search()" id="search">
 	<div class="input-group">
 		<input type="text" class="form-control" ng-model="value" placeholder="Search...">
 		<span class="input-group-btn">
