--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,147 +1,79 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,100,700,900,500);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+html {position: relative; min-height: 100%;}
 
-html {
-	position: relative;
-	min-height: 100%;
-}
+body {padding-top: 80px; margin-bottom: 190px;}
 
-body {
-	padding-top: 80px;
-	margin-bottom: 190px;
-}
-
-h1 {
-	font-size: 34px;
-	color: #ff551a;
-	margin-top: 40px;
-}
+h1 {font-size: 34px; color: #ff551a; margin-top: 40px;}
 
 /* Global styles */
-.clear {
-	clear: both;
-}
+.clear {clear: both;}
 
 /* Form */
-.submit {
-	background-color: #ff551a;
-    color: #fff;
-    border: none;
-    padding: 8px 18px;
-}
+.submit, .new_link {background-color: #ff551a; color: #fff; border: none; padding: 8px 18px;}
 
-.submit:hover {
-    background-color: #444;
-    color: #fff;
-}
+.submit:hover, .new_link:hover {background-color: #444; color: #fff;}
+
 
 /* Navigation */
-.navbar {
-	height: 80px;
-	background-color: #f5f5f5;
-}
+.navbar {height: 80px; background-color: #f5f5f5;}
 
-.navbar .container {
-	height: 100%;
-}
+.navbar .container {height: 100%;}
 
-.navbar a, .navbar .navbar-nav > li > a {
-	font-family: 'Roboto';
-	font-size: 12px;
-	font-weight: bold;
-	display: block;
-	height: 100%;
-	color: #888;
-	text-transform: uppercase;
-	line-height: 80px;
-	padding: 0 30px;
-}
+.navbar a, .navbar .navbar-nav > li > a {font-family: 'Roboto'; font-size: 12px; font-weight: bold; display: block; height: 100%; color: #888; text-transform: uppercase; line-height: 80px; padding: 0 30px;}
 
-.navbar .navbar-nav > li > a:hover {
-	background-color: #ff551a;
-	color: #fff;
-}
+.navbar .navbar-nav > li.active > a {color: #ff551a;}
 
-.navbar-toggle {
-	border-color: #444;
-	margin: 20px 20px 0 0;
-}
+.navbar .navbar-nav > li > a:hover {background-color: #ff551a; color: #fff;}
 
-.navbar-toggle .icon-bar {
-	background-color: #444;
-}
+.navbar-toggle {border-color: #444; margin: 20px 20px 0 0;}
 
-.navbar-collapse .navbar-nav {
-	margin: 0 -15px;
-}
-.navbar-collapse .navbar-nav li {
-	background-color: #f5f5f5;
-	border-top: 1px solid #eee;
-}
+.navbar-toggle .icon-bar {background-color: #444;}
+
+.navbar-collapse .navbar-nav {margin: 0 -15px;}
+.navbar-collapse .navbar-nav li {background-color: #f5f5f5; border-top: 1px solid #eee;}
+
 
 /* Footer */
-#footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 190px;
-	background-color: #444;
-	color: #fff;
-	font-family: 'Open Sans';
-}
+#footer {position: absolute; bottom: 0; width: 100%; height: 190px; background-color: #444; color: #fff; font-family: 'Open Sans';}
 
-#social {
-	float: right;
-	margin-top: 40px;
-}
+#social {float: right; margin-top: 40px;}
 
-#copyright {
-	font-size: 13px;
-	text-align: center;
-	margin-top: 40px;
-}
+#copyright {font-size: 13px; text-align: center; margin-top: 40px;}
 
-#copyright a {
-	color: #ff551a;
-}
+#copyright a {color: #ff551a;}
 
-.fa {
-	font-size: 3.2em;
-	color: #fff;
-}
+#social .fa {font-size: 3.2em; color: #fff;}
 
-.fa:hover {
-	color: #ff551a;
-}
+#social .fa:hover {color: #ff551a;}
+
 
 /* Login */
-#login {
-	width: 40%;
-	margin: auto;
-}
+#login {width: 40%; margin: auto;}
 
-#login .input-group {
-	margin: 25px 0;
-	width: 100%;
-}
+#login .input-group {margin: 25px 0; width: 100%;}
 
-.forgotten_password {
-	color: #888;
-	font-style: italic;
-	line-height: 35px;
-}
+.forgotten_password {color: #888; font-style: italic; line-height: 35px;}
 
-.forgotten_password:hover {
-	color: #ff551a;
-	text-decoration: none;
-}
+.forgotten_password:hover {color: #ff551a; text-decoration: none;}
 
-#login .submit {
-	float: right;
-}
+#login .submit {float: right;}
+
 
 /* Search */
-#search {
-	width: 40%;
-	margin: auto;
-}
+#search {width: 40%; margin: auto;}
+
+
+/* List */
+.breadcrumb_list {background: none;}
+.breadcrumb_list a {color: #333;}
+.breadcrumb_list a:hover {color: #ff551a; text-decoration: none;}
+
+.new_link {margin-right: 10px;}
+
+table.links a {color: #333;}
+table.links a:hover {color: #ff551a; text-decoration: none;}
+
+
+/* Various */
+.f-left {float: left;}
+.f-right {float: right;}
+.clear {clear: both;}
