--- a/app/views/users/login.html
+++ b/app/views/users/login.html
@@ -12,7 +12,7 @@
 			<span class="input-group-addon  glyphicon glyphicon-lock"></span>
 			<input type="password" class="form-control" ng-model="password" placeholder="Password">
 		</div>
-		<a href="#" class="forgotten_password">Forgot your password ?</a>
+		<a href="#/forgot-password" class="forgotten_password">Forgot your password ?</a>
 		<button type="submit" class="btn btn-default submit">Sign In</button>
 	</form>
 </div>
