--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,8 +1,8 @@
 html {position: relative; min-height: 100%;}
 
-body {padding-top: 80px; margin-bottom: 190px;}
+body {margin-bottom: 190px;}
 
-h1 {font-size: 34px; color: #ff551a; margin-top: 40px;}
+h1 {font-size: 30px; color: #ff551a; margin: 30px 0 20px;}
 
 /* Global styles */
 .clear {clear: both;}
@@ -14,11 +14,11 @@ h1 {font-size: 34px; color: #ff551a; margin-top: 40px;}
 
 
 /* Navigation */
-.navbar {height: 80px; background-color: #f5f5f5;}
+.navbar {height: 60px; background-color: #f5f5f5; border-radius: 0; border-top: none; border-right: none; border-left: none;}
 
 .navbar .container {height: 100%;}
 
-.navbar a, .navbar .navbar-nav > li > a {font-family: 'Roboto'; font-size: 12px; font-weight: bold; display: block; height: 100%; color: #888; text-transform: uppercase; line-height: 80px; padding: 0 30px;}
+.navbar a, .navbar .navbar-nav > li > a {font-family: 'Roboto'; font-size: 12px; font-weight: bold; display: block; height: 100%; color: #888; text-transform: uppercase; line-height: 59px; padding: 0 30px;}
 
 .navbar .navbar-nav > li.active > a {color: #ff551a;}
 
@@ -29,7 +29,7 @@ h1 {font-size: 34px; color: #ff551a; margin-top: 40px;}
 .navbar-toggle .icon-bar {background-color: #444;}
 
 .navbar-collapse .navbar-nav {margin: 0 -15px;}
-.navbar-collapse .navbar-nav li {background-color: #f5f5f5; border-top: 1px solid #eee;}
+.navbar-collapse .navbar-nav li {background-color: #f5f5f5;}
 
 
 /* Footer */
