--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -9,12 +9,12 @@
 </div>
 <div class="f-right">
 	<button type="button" class="btn btn-default new_link" ng-click="addModal()">New link</button>
-	<button type="button" class="btn btn-default" style="margin-right: 10px"><i class="fa fa-folder"></i></button>
-	<button type="button" class="btn btn-default" disabled="disabled" style="margin-right: 10px"><i class="fa fa-arrows"></i></button>
+	<button type="button" class="btn btn-default" ng-click="addFolderModal()" style="margin-right: 10px"><i class="fa fa-folder"></i></button>
+	<button type="button" class="btn btn-default" ng-disabled="!showMoveButton" style="margin-right: 10px"><i class="fa fa-arrows"></i></button>
 	<div class="btn-group">
-		<button type="button" class="btn btn-default" disabled="disabled"><span class="fa fa-copy"></span></button>
-		<button type="button" class="btn btn-default" disabled="disabled"><span class="fa fa-pencil"></span></button>
-		<button type="button" class="btn btn-default" disabled="disabled"><span class="fa fa-trash-o"></span></button>
+		<button type="button" class="btn btn-default" ng-disabled="!showDuplicateButton"><span class="fa fa-copy"></span></button>
+		<button type="button" class="btn btn-default" ng-disabled="!showEditButton"><span class="fa fa-pencil"></span></button>
+		<button type="button" class="btn btn-default" ng-disabled="!showDeleteButton" ng-click="deleteModal()"><span class="fa fa-trash-o"></span></button>
 	</div>
 </div>
 <div class="clear"></div>
@@ -22,7 +22,7 @@
 <table class="table table-hover links">
 	<thead>
 		<tr>
-			<th><input type="checkbox"></th>
+			<th><input type="checkbox" ng-model="allLinks" ng-click="checkAll()"></th>
 			<th>Title</th>
 			<th>Link</th>
 			<th>Added</th>
@@ -30,16 +30,20 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="f in tree.folders" ng-click="redirect('/links/' + f.id, $event)">
-			<td><input type="checkbox"></td>
+			<td><input type="checkbox" ng-model="checked['folders'][f.id]" ng-click="check(f.id, 'folders', $event)"></td>
 			<td><i class="fa fa-folder"></i> {{f.name}}</td>
 			<td></td>
 			<td style="width: 100px">{{f.date * 1000 | date:'MM/dd/yyyy'}}</td>
+			<!-- <td style="width: 20px"><span class="fa fa-pencil"></span></td>
+			<td style="width: 20px"><span class="fa fa-trash-o"></span></td> -->
 		</tr>
-		<tr ng-repeat="l in tree.links">
-			<td><input type="checkbox"></td>
+		<tr ng-repeat="l in tree.links" ng-click="checkLine(l.id, 'links')">
+			<td><input type="checkbox" ng-model="checked['links'][l.id]" ng-click="check(l.id, 'links', $event)"></td>
 			<td><i class="fa fa-link"></i> ...</td>
 			<td><a ng-href="{{l.url}}" target="_blank">{{l.url}}</a></td>
 			<td style="width: 100px">{{l.date * 1000 | date:'MM/dd/yyyy'}}</td>
+			<!-- <td style="width: 20px"><span class="fa fa-pencil"></span></td>
+			<td style="width: 20px"><span class="fa fa-trash-o"></span></td> -->
 		</tr>
 	</tbody>
 </table>
