--- a/app/views/links/edit.html
+++ b/app/views/links/edit.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
-	<h3>New link</h3>
+	<h3>Edit link</h3>
 </div>
-<form class="form-horizontal" role="form" ng-submit="save()">
-	<div class="modal-body">
+<div class="modal-body">
+	<form class="form-horizontal" role="form">
 		<div class="form-group">
 			<label for="input_add_link" class="col-sm-2 control-label">Link</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="input_add_link" ng-model="link.url" placeholder="http://">
+				<input type="email" class="form-control" id="input_add_link" ng-model="link.name" placeholder="http://">
 			</div>
 		</div>
 
@@ -18,9 +18,9 @@
 				</select>
 			</div>
 		</div> -->
-	</div>
-	<div class="modal-footer">
-		<button class="btn" ng-click="cancel()">Cancel</button>
-		<button class="btn submit">Save</button>
-	</div>
-</form>
+	</form>
+</div>
+<div class="modal-footer">
+	<button class="btn" ng-click="cancel()">Cancel</button>
+	<button class="btn submit" ng-click="save()">Save</button>
+</div>
