--- a/app/views/links/edit_folder.html
+++ b/app/views/links/edit_folder.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
-	<h3>New link</h3>
+	<h3>Edit folder</h3>
 </div>
 <form class="form-horizontal" role="form" ng-submit="save()">
 	<div class="modal-body">
 		<div class="form-group">
-			<label for="input_add_link" class="col-sm-2 control-label">Link</label>
+			<label for="edit_folder_name" class="col-sm-2 control-label">Name</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="input_add_link" ng-model="link.url" placeholder="http://">
+				<input type="text" class="form-control" id="edit_folder_name" ng-model="folder.name">
 			</div>
 		</div>
 
