--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -8,7 +8,7 @@
 	</ol>
 </div>
 <div class="f-right">
-	<button type="button" class="btn btn-default new_link" ng-click="addModal()">New link</button>
+	<button type="button" class="btn btn-default new_link" ng-click="addLinkModal()">New link</button>
 	<button type="button" class="btn btn-default" ng-click="addFolderModal()" style="margin-right: 10px"><i class="fa fa-folder"></i></button>
 	<button type="button" class="btn btn-default" ng-disabled="!showMoveButton" style="margin-right: 10px"><i class="fa fa-arrows"></i></button>
 	<div class="btn-group">
@@ -26,24 +26,26 @@
 			<th>Title</th>
 			<th>Link</th>
 			<th>Added</th>
+			<th></th>
+			<th></th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr ng-repeat="f in tree.folders" ng-click="redirect('/links/' + f.id, $event)">
-			<td><input type="checkbox" ng-model="checked['folders'][f.id]" ng-click="check(f.id, 'folders', $event)"></td>
+			<td ng-click="$event.stopPropagation();"><input type="checkbox" ng-model="checked['folders'][f.id]" ng-click="check(f.id, 'folders', $event)"></td>
 			<td><i class="fa fa-folder"></i> {{f.name}}</td>
 			<td></td>
 			<td style="width: 100px">{{f.date * 1000 | date:'MM/dd/yyyy'}}</td>
-			<!-- <td style="width: 20px"><span class="fa fa-pencil"></span></td>
-			<td style="width: 20px"><span class="fa fa-trash-o"></span></td> -->
+			<td ng-click="$event.stopPropagation();" style="width: 20px"><span class="fa fa-pencil" ng-click="editFolder(f.id, f.name, $event)"></span></td>
+			<td ng-click="$event.stopPropagation();" style="width: 20px"><span class="fa fa-trash-o" ng-click="deleteFolder(f.id, $event)"></span></td>
 		</tr>
 		<tr ng-repeat="l in tree.links" ng-click="checkLine(l.id, 'links')">
-			<td><input type="checkbox" ng-model="checked['links'][l.id]" ng-click="check(l.id, 'links', $event)"></td>
+			<td ng-click="$event.stopPropagation();"><input type="checkbox" ng-model="checked['links'][l.id]" ng-click="check(l.id, 'links', $event)"></td>
 			<td><i class="fa fa-link"></i> ...</td>
 			<td><a ng-href="{{l.url}}" target="_blank">{{l.url}}</a></td>
 			<td style="width: 100px">{{l.date * 1000 | date:'MM/dd/yyyy'}}</td>
-			<!-- <td style="width: 20px"><span class="fa fa-pencil"></span></td>
-			<td style="width: 20px"><span class="fa fa-trash-o"></span></td> -->
+			<td ng-click="editLink(l.id, $event)"style="width: 20px"><span class="fa fa-pencil"></span></td>
+			<td ng-click="deleteLink(l.id, $event)" style="width: 20px"><span class="fa fa-trash-o"></span></td>
 		</tr>
 	</tbody>
 </table>
