--- a/app/views/links/add_folder.html
+++ b/app/views/links/add_folder.html
@@ -6,7 +6,7 @@
 		<div class="form-group">
 			<label for="input_add_folder" class="col-sm-2 control-label">Name</label>
 			<div class="col-sm-10">
-				<input type="email" class="form-control" id="input_add_folder" ng-model="folder.name" placeholder="">
+				<input type="text" class="form-control" id="input_add_folder" ng-model="folder.name">
 			</div>
 		</div>
 
