--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -14,7 +14,7 @@
 	<div class="btn-group">
 		<button type="button" class="btn btn-default" ng-disabled="!showDuplicateButton"><span class="fa fa-copy"></span></button>
 		<button type="button" class="btn btn-default" ng-disabled="!showEditButton"><span class="fa fa-pencil"></span></button>
-		<button type="button" class="btn btn-default" ng-disabled="!showDeleteButton" ng-click="deleteModal()"><span class="fa fa-trash-o"></span></button>
+		<button type="button" class="btn btn-default" ng-disabled="!showDeleteButton" ng-click="deleteLinkModal()"><span class="fa fa-trash-o"></span></button>
 	</div>
 </div>
 <div class="clear"></div>
