Delete a folder + reorganize links views

--- a/app/views/links/add.html
+++ b/app/views/links/add.html
@@ -4,9 +4,9 @@
 <form class="form-horizontal" role="form" ng-submit="save()">
 	<div class="modal-body">
 		<div class="form-group">
-			<label for="input_add_link" class="col-sm-2 control-label">Link</label>
+			<label for="add_link_url" class="col-sm-2 control-label">Link</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="input_add_link" ng-model="link.url" placeholder="http://">
+				<input type="text" class="form-control" id="add_link_url" ng-model="link.url" placeholder="http://">
 			</div>
 		</div>
 
