--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -37,7 +37,7 @@
 			<td></td>
 			<td style="width: 100px">{{f.date * 1000 | date:'MM/dd/yyyy'}}</td>
 			<td ng-click="$event.stopPropagation();" style="width: 20px"><span class="fa fa-pencil" ng-click="editFolder(f.id, f.name, $event)"></span></td>
-			<td ng-click="$event.stopPropagation();" style="width: 20px"><span class="fa fa-trash-o" ng-click="deleteFolder(f.id, $event)"></span></td>
+			<td ng-click="deleteFolder(f.id, $event)" style="width: 20px"><span class="fa fa-trash-o"></span></td>
 		</tr>
 		<tr ng-repeat="l in tree.links" ng-click="checkLine(l.id, 'links')">
 			<td ng-click="$event.stopPropagation();"><input type="checkbox" ng-model="checked['links'][l.id]" ng-click="check(l.id, 'links', $event)"></td>
