--- a/app/views/links/edit.html
+++ b/app/views/links/edit.html
@@ -4,9 +4,9 @@
 <div class="modal-body">
 	<form class="form-horizontal" role="form">
 		<div class="form-group">
-			<label for="input_add_link" class="col-sm-2 control-label">Link</label>
+			<label for="edit_link_url" class="col-sm-2 control-label">Link</label>
 			<div class="col-sm-10">
-				<input type="email" class="form-control" id="input_add_link" ng-model="link.name" placeholder="http://">
+				<input type="email" class="form-control" id="edit_link_url" ng-model="link.url">
 			</div>
 		</div>
 
