--- a/app/views/links/folders/add.html
+++ b/app/views/links/folders/add.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
 	<h3>New folder</h3>
 </div>
-<div class="modal-body">
-	<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" ng-submit="save()">
+	<div class="modal-body">
 		<div class="form-group">
-			<label for="input_add_folder" class="col-sm-2 control-label">Name</label>
+			<label for="add_folder_name" class="col-sm-2 control-label">Name</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="input_add_folder" ng-model="folder.name">
+				<input type="text" class="form-control" id="add_folder_name" ng-model="folder.name">
 			</div>
 		</div>
 
@@ -18,9 +18,9 @@
 				</select>
 			</div>
 		</div> -->
-	</form>
-</div>
-<div class="modal-footer">
-	<button class="btn" ng-click="cancel()">Cancel</button>
-	<button class="btn submit" ng-click="save()">Save</button>
-</div>
+	</div>
+	<div class="modal-footer">
+		<button class="btn" ng-click="cancel()">Cancel</button>
+		<button class="btn submit">Save</button>
+	</div>
+</form>
