--- a/app/views/links/folders/delete.html
+++ b/app/views/links/folders/delete.html
@@ -2,7 +2,7 @@
 	<h3>Delete</h3>
 </div>
 <div class="modal-body">
-	<p>Are you sure you want to delete this link ?
+	<p>Are you sure you want to delete this folder ?
 </div>
 <div class="modal-footer">
 	<button class="btn" ng-click="cancel()">Cancel</button>
