--- a/app/views/users/login.html
+++ b/app/views/users/login.html
@@ -5,11 +5,11 @@
 
 	<form role="form" ng-submit="login()">
 		<div class="input-group">
-			<span class="input-group-addon glyphicon glyphicon-user"></span>
+			<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
 			<input type="text" class="form-control" id="username" ng-model="username" placeholder="Login">
 		</div>
 		<div class="input-group">
-			<span class="input-group-addon  glyphicon glyphicon-lock"></span>
+			<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
 			<input type="password" class="form-control" ng-model="password" placeholder="Password">
 		</div>
 		<a href="#/forgot-password" class="forgotten_password">Forgot your password ?</a>
