--- a/app/views/links/edit.html
+++ b/app/views/links/edit.html
@@ -1,26 +1,19 @@
 <div class="modal-header">
 	<h3>Edit link</h3>
 </div>
-<div class="modal-body">
-	<form class="form-horizontal" role="form">
+
+<form class="form-horizontal" role="form" ng-submit="save()">
+	<div class="modal-body">
 		<div class="form-group">
 			<label for="edit_link_url" class="col-sm-2 control-label">Link</label>
 			<div class="col-sm-10">
-				<input type="email" class="form-control" id="edit_link_url" ng-model="link.url">
+				<input type="text" class="form-control" id="edit_link_url" ng-model="link.url">
 			</div>
 		</div>
+	</div>
 
-		<!-- <div class="form-group">
-			<label for="select_add_folder" class="col-sm-2 control-label">Folder</label>
-			<div class="col-sm-10">
-				<select class="form-control" ng-options="f.name for f in folders">
-					<option value="">Home</value>
-				</select>
-			</div>
-		</div> -->
-	</form>
-</div>
-<div class="modal-footer">
-	<button class="btn" ng-click="cancel()">Cancel</button>
-	<button class="btn submit" ng-click="save()">Save</button>
-</div>
+	<div class="modal-footer">
+		<button class="btn" ng-click="cancel()">Cancel</button>
+		<button class="btn submit">Save</button>
+	</div>
+</form>
