Start move and duplicate links

--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -10,10 +10,8 @@
 <div class="f-right">
 	<button type="button" class="btn btn-default new_link" ng-click="addLinkModal()">New link</button>
 	<button type="button" class="btn btn-default" ng-click="addFolderModal()" style="margin-right: 10px"><i class="fa fa-folder"></i></button>
-	<button type="button" class="btn btn-default" ng-disabled="!showMoveButton" style="margin-right: 10px"><i class="fa fa-arrows"></i></button>
 	<div class="btn-group">
-		<button type="button" class="btn btn-default" ng-disabled="!showDuplicateButton"><span class="fa fa-copy"></span></button>
-		<button type="button" class="btn btn-default" ng-disabled="!showEditButton"><span class="fa fa-pencil"></span></button>
+		<button type="button" class="btn btn-default" ng-disabled="!showMoveButton"><i class="fa fa-arrows"></i></button>
 		<button type="button" class="btn btn-default" ng-disabled="!showDeleteButton" ng-click="deleteMultipleModal()"><span class="fa fa-trash-o"></span></button>
 	</div>
 </div>
@@ -36,7 +34,9 @@
 			<td><i class="fa fa-folder"></i> {{f.name}}</td>
 			<td></td>
 			<td style="width: 100px">{{f.date * 1000 | date:'MM/dd/yyyy'}}</td>
-			<td ng-click="$event.stopPropagation();" style="width: 20px"><span class="fa fa-pencil" ng-click="editFolder(f.id, f.name, f.date, $event)"></span></td>
+			<td ng-click="moveFolder(f.id, $event)" style="width: 20px"><span class="fa fa-arrows"></span></td>
+			<td ng-click="duplicateFolder(f.id, $event)" style="width: 20px"><span class="fa fa-copy"></span></td>
+			<td ng-click="editFolder(f.id, f.name, f.date, $event)" style="width: 20px"><span class="fa fa-pencil"></span></td>
 			<td ng-click="deleteFolder(f.id, $event)" style="width: 20px"><span class="fa fa-trash-o"></span></td>
 		</tr>
 		<tr ng-repeat="l in tree.links" ng-click="checkLine(l.id, 'links')">
@@ -44,7 +44,9 @@
 			<td><i class="fa fa-link"></i> ...</td>
 			<td><a ng-href="{{l.url}}" target="_blank">{{l.url}}</a></td>
 			<td style="width: 100px">{{l.date * 1000 | date:'MM/dd/yyyy'}}</td>
-			<td ng-click="editLink(l, $event)"style="width: 20px"><span class="fa fa-pencil"></span></td>
+			<td ng-click="moveLink(l.id, $event)" style="width: 20px"><span class="fa fa-arrows"></span></td>
+			<td ng-click="duplicateLink(l.id, $event)" style="width: 20px"><span class="fa fa-copy"></span></td>
+			<td ng-click="editLink(l.id, $event)" style="width: 20px"><span class="fa fa-pencil"></span></td>
 			<td ng-click="deleteLink(l.id, $event)" style="width: 20px"><span class="fa fa-trash-o"></span></td>
 		</tr>
 	</tbody>
