--- a/app/views/links/modal/add.html
+++ b/app/views/links/modal/add.html
@@ -6,7 +6,7 @@
 		<div class="form-group">
 			<label for="add_link_url" class="col-sm-2 control-label">Link</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="add_link_url" ng-model="link.url" placeholder="http://">
+				<input type="url" class="form-control" id="add_link_url" ng-model="link.url" placeholder="http://">
 			</div>
 		</div>
 
