--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,13 +1,16 @@
 html {position: relative; min-height: 100%;}
 
-body {margin-bottom: 190px;}
+body {margin-bottom: 190px; color: #444;}
 
 h1 {font-size: 30px; color: #ff551a; margin: 30px 0 20px;}
 
-/* Global styles */
-.clear {clear: both;}
+a {color: #FF551A;}
+a:hover {color: #FF551A; text-decoration: underline;}
+
 
 /* Form */
+.form-horizontal .control-label.t-left {text-align: left;}
+
 .submit, .new_link {background-color: #ff551a; color: #fff; border: none; padding: 7px 18px;}
 
 .submit:hover, .new_link:hover {background-color: #444; color: #fff;}
@@ -82,6 +85,8 @@ table.links a:hover {color: #ff551a; text-decoration: none;}
 
 
 /* Various */
+.t-center {text-align: center;}
+.t-left {text-align: left;}
 .f-left {float: left;}
 .f-right {float: right;}
 .clear {clear: both;}
