Start privacy policy + terms of service + input/textarea blur

--- a/app/views/contact/index.html
+++ b/app/views/contact/index.html
@@ -1,1 +1,13 @@
 <h1>Contact</h1>
+
+<p>We like to make greats and useful things and your opinion is important for us. So if you have a question about the concept or a problem with the website, do not hesitate to contact us.</p>
+
+
+<!-- <form class="form-inline" role="form">
+	<div class="form-group">
+		<input type="email" class="form-control" id="contact_email" placeholder="Email">
+	</div>
+	<div class="form-group">
+		<input type="password" class="form-control" id="contact_subject" placeholder="Subject">
+	</div>
+</form> -->
