--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,6 +11,8 @@ a:hover {color: #FF551A; text-decoration: underline;}
 /* Form */
 .form-horizontal .control-label.t-left {text-align: left;}
 
+textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {border: none; box-shadow: 0 0 2px 2px #FF551A;}
+
 .submit, .new_link {background-color: #ff551a; color: #fff; border: none; padding: 7px 18px;}
 
 .submit:hover, .new_link:hover {background-color: #444; color: #fff;}
