--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,11 +11,13 @@ a:hover {color: #FF551A; text-decoration: underline;}
 /* Form */
 .form-horizontal .control-label.t-left {text-align: left;}
 
-textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {border: none; box-shadow: 0 0 2px 2px #FF551A;}
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="url"]:focus, .uneditable-input:focus {border: none; box-shadow: 0 0 2px 2px #FF551A;}
 
 .submit, .new_link {background-color: #ff551a; color: #fff; border: none; padding: 7px 18px;}
 
 .submit:hover, .new_link:hover {background-color: #444; color: #fff;}
+
+.input-group .submit {vertical-align: bottom;}
 
 
 /* Navigation */
@@ -65,6 +67,8 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {border:
 
 /* Search */
 #search {width: 40%; margin: auto;}
+#search_links a {color: #444;}
+#search_links a:hover {color: #444; text-decoration: underline;}
 
 
 /* List */
