--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,1 +1,37 @@
-<p>Coming soon...</p>
+<div id="home">
+	<h1><span class="orange">W</span>ebsterday - <span class="slogan">the best way to remember where you browse</span></h1>
+
+	<p class="presentation">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, aliquid ad veritatis tenetur provident nobis maiores quibusdam est ipsa deleniti sit officiis itaque aliquam commodi minus non esse minima cum!
+	</p>
+
+
+	<div class="t-center" style="margin: 40px 0 60px"><button type="button" class="btn btn-default submit lets_go">Let's go!</button></div>
+
+	<hr>
+
+	<h2>The concept</h2>
+
+	<div class="row" style="margin-bottom: 40px">
+		<div class="col-md-3 argument">
+			<div class="picture"><i class="fa fa-laptop"></i></div>
+			<div class="title">Browse</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+		</div>
+		<div class="col-md-3 argument">
+			<div class="picture"><i class="fa fa-save"></i></div>
+			<div class="title">Save</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+		</div>
+		<div class="col-md-3 argument">
+			<div class="picture"><i class="fa fa-search"></i></div>
+			<div class="title">Search</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+		</div>
+		<div class="col-md-3 argument">
+			<div class="picture"><i class="fa fa-heart-o"></i></div>
+			<div class="title">Enjoy!</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+		</div>
+	</div>
+</div>
