--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -1,1 +1,9 @@
 <h1>Account</h1>
+
+<p>Email: ...</p>
+
+<p>Change my password</p>
+
+<p>Manage my banned domains</p>
+
+<p><a ng-href="#/logout">Logout</a></p>
