--- a/app/views/users/forgotten_password.html
+++ b/app/views/users/forgotten_password.html
@@ -1,3 +1,26 @@
 <h1>Forgotten password</h1>
 
-<p>Coming soon...</p>
+<div ng-show="!showConfirmation">
+	<p class="t-center" style="margin-top: 40px; color: #888">You don't remember your password? Let your email below to receive a link to get a new one:</p>
+
+	<form role="form" ng-submit="send()">
+		<div class="row" style="margin: 30px 0">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4">
+				<input type="email" class="form-control" id="forgot_password_email" ng-model="email" placeholder="Email">
+			</div>
+			<div class="col-sm-4"></div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4">
+				<button type="submit" class="btn btn-default submit f-right">Send</button>
+			</div>
+			<div class="col-sm-4"></div>
+		</div>
+	</div>
+</div>
+<p ng-show="showConfirmation" class="t-center">
+	An email has been sent to this email with a new password!
+</p>
