--- a/app/views/contact/index.html
+++ b/app/views/contact/index.html
@@ -1,7 +1,10 @@
-<h1>Contact</h1>
-
-<p>We like to make greats and useful things and your opinion is important for us. So if you have a question about the concept or a problem with the website, do not hesitate to contact us.</p>
-
+<div class="row">
+	<div class="col-md-2"></div>
+	<div class="col-md-8">
+		<h1>Contact</h1>
+		<p style="margin: 30px 0">We like to make greats and useful things and your opinion is important for us. So if you have a question about the concept or a problem with the website, do not hesitate to contact us.</p>
+	</div>
+</div>
 
 <!-- <form class="form-inline" role="form">
 	<div class="form-group">
@@ -11,3 +14,22 @@
 		<input type="password" class="form-control" id="contact_subject" placeholder="Subject">
 	</div>
 </form> -->
+
+<div class="row">
+	<div class="col-md-2"></div>
+	<div class="col-md-4"><input type="email" class="form-control" id="contact_email" placeholder="Email"></div>
+	<div class="col-md-4"><input type="password" class="form-control" id="contact_subject" placeholder="Subject"></div>
+	<div class="col-md-2"></div>
+</div>
+
+<div class="row" style="margin-top: 30px">
+	<div class="col-md-2"></div>
+	<div class="col-md-8"><textarea class="form-control" rows="3"></textarea></div>
+	<div class="col-md-2"></div>
+</div>
+
+<div class="row" style="margin-top: 30px">
+	<div class="col-md-2"></div>
+	<div class="col-md-8"><button type="submit" class="btn btn-default submit f-right">Send</button></div>
+	<div class="col-md-2"></div>
+</div>
