--- a/app/views/users/add.html
+++ b/app/views/users/add.html
@@ -1,44 +1,49 @@
-<h1>Create account</h1>
+<div class="row">
+	<div class="col-md-2"></div>
+	<div class="col-md-8">
+		<h1>Create account</h1>
 
-<p class="t-center" style="margin: 30px 0 40px" ng-show="!showConfirmation">Already signed up? Click <a ng-href="#/sign-in">here</a> to login on your account.</p>
+		<p class="t-center" style="margin: 30px 0 40px" ng-show="!showConfirmation">Already signed up? Click <a ng-href="#/sign-in">here</a> to login on your account.</p>
 
-<div class="row t-center" ng-show="!showConfirmation">
-	<form class="form-horizontal" role="form" class="col-sm-8" ng-submit="create()">
-		<div class="form-group">
-			<div class="col-sm-2"></div>
-			<label for="create_account_username" class="col-sm-2 control-label t-left">Username:</label>
-			<div class="col-sm-6">
-				<input type="text" class="form-control" id="create_account_username" ng-model="user.username">
-			</div>
+		<div class="row" ng-show="!showConfirmation">
+			<form class="form-horizontal" role="form" class="col-sm-8" ng-submit="create()">
+				<div class="form-group">
+					<div class="col-sm-2"></div>
+					<label for="create_account_username" class="col-sm-2 control-label t-left">Username:</label>
+					<div class="col-sm-6">
+						<input type="text" class="form-control" id="create_account_username" ng-model="user.username">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-2"></div>
+					<label for="create_account_email" class="col-sm-2 control-label t-left">Email:</label>
+					<div class="col-sm-6">
+						<input type="email" class="form-control" id="create_account_email" ng-model="user.email">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-2"></div>
+					<label for="create_account_password" class="col-sm-2 control-label t-left">Password:</label>
+					<div class="col-sm-6">
+						<input type="password" class="form-control" id="create_account_password" ng-model="user.password">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-2"></div>
+					<label for="create_account_confirm_password" class="col-sm-2 control-label t-left">Confirm password:</label>
+					<div class="col-sm-6">
+						<input type="password" class="form-control" id="create_account_confirm_password" ng-model="user.confirmPassword">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-offset-2 col-sm-6">
+						<button type="submit" class="btn btn-default submit f-right">Sign up</button>
+					</div>
+				</div>
+			</form>
 		</div>
-		<div class="form-group">
-			<div class="col-sm-2"></div>
-			<label for="create_account_email" class="col-sm-2 control-label t-left">Email:</label>
-			<div class="col-sm-6">
-				<input type="email" class="form-control" id="create_account_email" ng-model="user.email">
-			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-2"></div>
-			<label for="create_account_password" class="col-sm-2 control-label t-left">Password:</label>
-			<div class="col-sm-6">
-				<input type="password" class="form-control" id="create_account_password" ng-model="user.password">
-			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-2"></div>
-			<label for="create_account_confirm_password" class="col-sm-2 control-label t-left">Confirm password:</label>
-			<div class="col-sm-6">
-				<input type="password" class="form-control" id="create_account_confirm_password" ng-model="user.confirmPassword">
-			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-offset-2 col-sm-6">
-				<button type="submit" class="btn btn-default submit f-right">Sign up</button>
-			</div>
-		</div>
-	</form>
+
+		<p class="t-center" style="margin: 30px" ng-show="showConfirmation">Your account has been created! You can now <a ng-href="#/sign-in">sign in</a>.</p>
+	</div>
 </div>
-
-<p class="t-center" style="margin: 30px" ng-show="showConfirmation">Your account has been created! You can now <a ng-href="#/sign-in">sign in</a>.</p>
