--- a/app/views/users/login.html
+++ b/app/views/users/login.html
@@ -1,24 +1,27 @@
-<div id="login">
-	<h1>Login</h1>
+<div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-md-6" id="login">
+		<h1>Login</h1>
 
-	<div class="alert alert-danger" ng-show="showError">Incorrect username and/or password.</div>
+		<div class="alert alert-danger" ng-show="showError">Incorrect username and/or password.</div>
 
-	<form role="form" ng-submit="login()">
-		<div class="input-group">
-			<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-			<input type="text" class="form-control" id="username" ng-model="username" placeholder="Login">
-		</div>
-		<div class="input-group">
-			<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-			<input type="password" class="form-control" ng-model="password" placeholder="Password">
-		</div>
-		
-		<div class="input-group" style="margin-top: 20px; margin-bottom: 15px">
-			<div class="checkbox col-md-8" style="margin-top: 6px">
-				<label><input type="checkbox" ng-model="remember"> Remember me</label>
+		<form role="form" ng-submit="login()">
+			<div class="input-group">
+				<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+				<input type="text" class="form-control" id="username" ng-model="username" placeholder="Login">
 			</div>
-			<div class="col-md-4" style="padding-right: 0"><button type="submit" class="btn btn-default submit">Sign In</button></div>
-		</div>
-		<a href="#/forgot-password" class="forgotten_password">Forgot your password ?</a>
-	</form>
+			<div class="input-group">
+				<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+				<input type="password" class="form-control" ng-model="password" placeholder="Password">
+			</div>
+			
+			<div class="input-group" style="margin-top: 20px; margin-bottom: 15px">
+				<div class="checkbox col-md-8" style="margin-top: 6px">
+					<label><input type="checkbox" ng-model="remember"> Remember me</label>
+				</div>
+				<div class="col-md-4" style="padding-right: 0"><button type="submit" class="btn btn-default submit">Sign In</button></div>
+			</div>
+			<a href="#/forgot-password" class="forgotten_password">Forgot your password ?</a>
+		</form>
+	</div>
 </div>
