--- a/app/views/users/forgotten_password.html
+++ b/app/views/users/forgotten_password.html
@@ -8,22 +8,18 @@
 
 			<form role="form" ng-submit="send()">
 				<div class="row" style="margin-top: 30px; margin-bottom: 30px">
-					<div class="col-sm-3"></div>
-					<div class="col-sm-6">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-8">
 						<input type="email" class="form-control" id="forgot_password_email" ng-model="email" placeholder="Email">
 					</div>
-					<div class="col-sm-3"></div>
+					<div class="col-sm-2"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="col-md-1" style="margin-top: 10px">
+					<div class="col-md-10" style="margin-top: 10px">
 						<a ng-href="#/sign-in">Back</a>
 					</div>
-					<div class="col-sm-6">
-						<button type="submit" class="btn btn-default submit f-right">Send</button>
-					</div>
-					<div class="col-sm-3"></div>
+					<div class="col-sm-2"><button type="submit" class="btn btn-default submit f-right">Send</button></div>
 				</div>
 			</form>
 		</div>
