--- a/app/views/privacy_policy.html
+++ b/app/views/privacy_policy.html
@@ -1,1 +1,5 @@
 <h1>Privacy Policy</h1>
+
+<p>Websterday is not a lucrative project and pivacy is really important for us.</p>
+
+<p>The application may collect some information like your email address or the websites where you browse but we will send them to a third party (even with a good price !).</p>
