--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -2,8 +2,8 @@
 
 <p>Email: {{user.email}}</p>
 
-<p>Change my password</p>
+<p>Edit my account</p>
 
-<p>Manage my banned domains</p>
+<p>Change my password</p>
 
 <p><a ng-href="#/logout">Logout</a></p>
