--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,9 +2,8 @@
 	<h1><span class="orange">W</span>ebsterday - <span class="slogan">the best way to remember where you browse</span></h1>
 
 	<p class="presentation">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, aliquid ad veritatis tenetur provident nobis maiores quibusdam est ipsa deleniti sit officiis itaque aliquam commodi minus non esse minima cum!
+		Have you never wanted to find a page you saw before to send the link to someone? Of course, you already had this problem! This is why we decided to create this application: to save all the links where you browse
 	</p>
-
 
 	<div class="t-center" style="margin: 40px 0 60px"><button type="button" class="btn btn-default submit lets_go">Let's go!</button></div>
 
@@ -14,24 +13,24 @@
 
 	<div class="row" style="margin-bottom: 40px">
 		<div class="col-md-3 argument">
-			<div class="picture"><i class="fa fa-laptop"></i></div>
-			<div class="title">Browse</div>
-			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+			<div class="picture"><i class="fa fa-gear"></i></div>
+			<div class="title">Extension</div>
+			<div class="description">Install the Chrome extension and launch it to sign up on the service.</div>
 		</div>
 		<div class="col-md-3 argument">
-			<div class="picture"><i class="fa fa-save"></i></div>
-			<div class="title">Save</div>
-			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+			<div class="picture"><i class="fa fa-laptop"></i></div>
+			<div class="title">Browse</div>
+			<div class="description">Use your browse as usual and let the extension save the links.</div>
 		</div>
 		<div class="col-md-3 argument">
 			<div class="picture"><i class="fa fa-search"></i></div>
 			<div class="title">Search</div>
-			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+			<div class="description">Need to find an old link? Use this website to find it.</div>
 		</div>
 		<div class="col-md-3 argument">
 			<div class="picture"><i class="fa fa-heart-o"></i></div>
 			<div class="title">Enjoy!</div>
-			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, mollitia, recusandae, labore harum id vitae tenetur reprehenderit aliquid accusantium neque amet ratione quibusdam culpa eos suscipit. Magni, adipisci dolorem veniam.</div>
+			<div class="description">Now let show to your friends all the links who want!</div>
 		</div>
 	</div>
 </div>
