--- a/app/views/users/login.html
+++ b/app/views/users/login.html
@@ -17,11 +17,11 @@
 			
 			<div class="input-group" style="margin-top: 20px; margin-bottom: 15px">
 				<div class="checkbox col-md-8" style="margin-top: 6px">
-					<label><input type="checkbox" ng-model="remember"> Remember me</label>
+					<!-- <label><input type="checkbox" ng-model="remember"> Remember me</label> -->
+					<a href="#/forgot-password" class="forgotten_password">Forgot your password ?</a>
 				</div>
 				<div class="col-md-4" style="padding-right: 0"><button type="submit" class="btn btn-default submit">Sign In</button></div>
 			</div>
-			<a href="#/forgot-password" class="forgotten_password">Forgot your password ?</a>
 		</form>
 	</div>
 </div>
