--- a/app/views/links/list.html
+++ b/app/views/links/list.html
@@ -1,8 +1,9 @@
 <h1>History</h1>
 
-<button type="button" class="btn btn-default new_link" ng-click="addLinkModal()">New link</button>
+<p><button type="button" class="btn btn-default new_link f-right" ng-click="addLinkModal()">New link</button></p>
+<div class="clear"></div>
 
-<table class="table links" ng-show="links.length > 0">
+<table class="table links" ng-show="links.length > 0" style="margin-top: 20px">
 	<thead>
 		<tr>
 			<th>Title</th>
