--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,10 +2,10 @@
 	<h1><span class="orange">W</span>ebsterday - <span class="slogan">the best way to remember where you browse</span></h1>
 
 	<p class="presentation">
-		Have you never wanted to find a page you saw before to send the link to someone? Of course, you already had this problem! This is why we decided to create this application: to save all the links where you browse
+		Have you ever wanted to find an old link to send it to someone? This is why we created Websterday: to help you to avoid this problem!
 	</p>
 
-	<div class="t-center" style="margin: 40px 0 60px"><button type="button" class="btn btn-default submit lets_go">Let's go!</button></div>
+	<div class="t-center" style="margin: 40px 0 60px"><a type="button" class="btn btn-default submit start_button" ng-href="#/start">Let's go!</a></div>
 
 	<hr>
 
