--- a/app/views/privacy_policy.html
+++ b/app/views/privacy_policy.html
@@ -3,3 +3,5 @@
 <p>Websterday is not a lucrative project and pivacy is really important for us.</p>
 
 <p>The application may collect some information like your email address or the websites where you browse but we will send them to a third party (even with a good price !).</p>
+
+<p>If you have any question about how we collect and store data, do not hesitate to <a ng-href="#/contact">contact us</a>.</p>
