--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -2,8 +2,8 @@
 
 <p>Email: {{user.email}}</p>
 
-<p>Edit my account</p>
+<!-- <p>Edit my account</p> -->
 
-<p>Change my password</p>
+<!-- <p>Change my password</p> -->
 
 <p><a ng-href="#/logout">Logout</a></p>
