--- a/app/views/users/forgotten_password.html
+++ b/app/views/users/forgotten_password.html
@@ -1,33 +1,36 @@
 <div class="row">
 	<div class="col-md-2"></div>
 	<div class="col-md-8">
-		<h1>Forgotten password</h1>
+		<div class="col-md-1"></div>
+		<div class="col-md-10">
+			<h1>Forgotten password</h1>
 
-		<div ng-show="!showConfirmation">
-			<p class="t-center" style="margin-top: 40px; color: #888">You don't remember your password? Let your email below to receive a link to get a new one:</p>
+			<div ng-show="!showConfirmation">
+				<p class="t-center" style="margin-top: 40px; color: #888">You don't remember your password? Let your email below to receive a link to get a new one:</p>
 
-			<form role="form" ng-submit="send()">
-				<div class="row" style="margin-top: 30px; margin-bottom: 30px">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-8">
-						<input type="email" class="form-control" id="forgot_password_email" ng-model="email" placeholder="Email">
+				<form role="form" ng-submit="send()">
+					<div class="row" style="margin-top: 30px; margin-bottom: 30px">
+						<div class="col-sm-2"></div>
+						<div class="col-sm-8">
+							<input type="email" class="form-control" id="forgot_password_email" ng-model="email" placeholder="Email">
+						</div>
+						<div class="col-sm-2"></div>
 					</div>
-					<div class="col-sm-2"></div>
-				</div>
 
-				<div class="row">
-					<div class="col-md-10" style="margin-top: 10px">
-						<a ng-href="#/sign-in">Back</a>
+					<div class="row">
+						<div class="col-md-10" style="margin-top: 10px">
+							<a ng-href="#/sign-in">Back</a>
+						</div>
+						<div class="col-sm-2"><button type="submit" class="btn btn-default submit f-right">Send</button></div>
 					</div>
-					<div class="col-sm-2"><button type="submit" class="btn btn-default submit f-right">Send</button></div>
-				</div>
-			</form>
-		</div>
-		<div ng-show="showConfirmation">
-			<p class="t-center" style="margin: 40px 0;">
-				An email has been sent to this email with a new password!
-			</p>
-			<p><a ng-href="#/sign-in">Back</a></p>
+				</form>
+			</div>
+			<div ng-show="showConfirmation">
+				<p class="t-center" style="margin: 40px 0;">
+					An email has been sent to this email with a new password!
+				</p>
+				<p><a ng-href="#/sign-in">Back</a></p>
+			</div>
 		</div>
 	</div>
 	<div class="col-md-2"></div>
